--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,23 +11,88 @@
     <link rel="stylesheet" href="css/style.css">
     <title>My Team Page</title>
 </head>
+
 <body>
     <div class="container">
-        <header>
+        <aside>
             <div class="box-left">
-                <h1></h1>
+                <h1>The creative crew</h1>
             </div>
             <div class="box-right">
-                <h3></h3>
-                <p></p>
+                <h3>Who we are</h3>
+                <p>We are team of creatively diverse. driven. innovative individuals working in various locations from
+                    the world</p>
             </div>
-        </header>
-        <section class="photos">
-            
+        </aside>
+        <section>
+            <div class="photos">
+                <div class="column">
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo1.png" alt="Image">
+                            <p class="name">Bill Mahoney</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Product Owner</p>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo4.png" alt="Image">
+                            <p class="name">Skylah Lu</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Ux Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column column_down">
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo2.png" alt="Image">
+                            <p class="name">Saba Cabrera</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Art Director</p>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo5.png" alt="Image">
+                            <p class="name">Griff Richars</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Developer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo3.png" alt="Image">
+                            <p class="name">Shae Le</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Tech Lead</p>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo6.png" alt="Image">
+                            <p class="name">Stan Jhon</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Developer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+
         <footer>
-            <p></p>
+            <p>Keiler Guardo <a href="https://devchallenges.io/challenges" target="_blank">@DevChallenges.io</a></p>
         </footer>
     </div>
 </body>
+
 </html>
