--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             <div class="box-right">
                 <h3>Who we are</h3>
                 <p>We are team of creatively diverse. driven. innovative individuals working in various locations from
-                    the world</p>
+                    the world.</p>
             </div>
         </aside>
+        <!-- ?Section -->
         <section>
             <div class="photos">
                 <div class="column">
@@ -86,8 +87,72 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- ?New Columns -->
+                <div class=" column new_column">
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo1.png" alt="Image">
+                            <p class="name">Bill Mahoney</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Product Owner</p>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo3.png" alt="Image">
+                            <p class="name">Shae Le</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Tech Lead</p>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo5.png" alt="Image">
+                            <p class="name">Griff Richars</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Developer</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="column new_column column_down">
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo2.png" alt="Image">
+                            <p class="name">Saba Cabrera</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Art Director</p>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo4.png" alt="Image">
+                            <p class="name">Skyah Lu</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Ux Designer</p>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <div class="left">
+                            <img src="assets/photos/photo6.png" alt="Image">
+                            <p class="name">Stan Jhon</p>
+                        </div>
+                        <div class="right">
+                            <p class="profession">Developer</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ?New Columns -->
             </div>
         </section>
+        <!-- ?Section -->
 
         <footer>
             <p>Keiler Guardo <a href="https://devchallenges.io/challenges" target="_blank">@DevChallenges.io</a></p>
